part1/110/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: output-generator-110-svc
spec:
  type: ClusterIP
  selector:
    app: 110-output-generator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
